covers height fixed in mobile media query.

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ h1{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    height: auto;
     
   }
   .resize{
